--- a/typescript/packages/x402/package.json
+++ b/typescript/packages/x402/package.json
@@ -50,6 +50,8 @@
     "vitest": "^3.0.5"
   },
   "dependencies": {
+    "@meshsdk/core": "1.9.0-beta.86",
+    "@meshsdk/core-cst": "1.9.0-beta.86",
     "@scure/base": "^1.2.6",
     "@solana-program/compute-budget": "^0.8.0",
     "@solana-program/token": "^0.5.1",
