--- a/examples/typescript/facilitator/.env-local
+++ b/examples/typescript/facilitator/.env-local
@@ -1,3 +1,4 @@
 EVM_PRIVATE_KEY=0xYourPrivateKey
 SVM_PRIVATE_KEY=base58EncodedSolanaPrivateKey
+CARDANO_PRIVATE_KEY=bech32PrivateKeyLikexprv1cqa4...z5gpeqgu
 PORT=3002
